--- a/website/src/locale/messages.fr.xlf
+++ b/website/src/locale/messages.fr.xlf
@@ -1227,8 +1227,8 @@
           <context context-type="linenumber">5,6</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="7096384584205098514" datatype="html">
-        <source>Rappeur &amp; Performeur</source>
+      <trans-unit id="2008763274146547461" datatype="html">
+        <source>Artiste &amp; Performeur</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
           <context context-type="linenumber">24,25</context>
