--- a/website/src/locale/messages.xlf
+++ b/website/src/locale/messages.xlf
@@ -897,8 +897,8 @@
           <context context-type="linenumber">5,6</context>
         </context-group>
       </trans-unit>
-      <trans-unit id="7096384584205098514" datatype="html">
-        <source>Rapper &amp; Performer</source>
+      <trans-unit id="2008763274146547461" datatype="html">
+        <source>Artist &amp; Performer</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
           <context context-type="linenumber">24,25</context>
@@ -925,10 +925,6 @@
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
           <context context-type="linenumber">70</context>
         </context-group>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">90</context>
-        </context-group>
       </trans-unit>
       <trans-unit id="2852049119246307961" datatype="html">
         <source>DJ &amp; Sound Engineer</source>
@@ -941,35 +937,35 @@
         <source>The VCG Collective</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">104,106</context>
+          <context context-type="linenumber">94,96</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5871405740654686969" datatype="html">
         <source> Behind every great show is a dedicated team. The VCG collective works tirelessly on logistics, sound engineering, visual production, and event management to deliver unforgettable experiences. </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">108,109</context>
+          <context context-type="linenumber">98,99</context>
         </context-group>
       </trans-unit>
       <trans-unit id="1421931127169081421" datatype="html">
         <source>Book VCG for Your Event</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">141,142</context>
+          <context context-type="linenumber">131,132</context>
         </context-group>
       </trans-unit>
       <trans-unit id="3124191535140989867" datatype="html">
         <source> Bring the energy of VCG to your venue or festival. We offer complete performance packages including artists, DJs, and full production support. </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">143,144</context>
+          <context context-type="linenumber">133,134</context>
         </context-group>
       </trans-unit>
       <trans-unit id="7551032666547158486" datatype="html">
         <source> Contact Us for Booking </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/pages/stage/stage.component.html</context>
-          <context context-type="linenumber">147,148</context>
+          <context context-type="linenumber">137,138</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5483463624647527325" datatype="html">
