--- a/website/src/locale/messages.fr.xlf
+++ b/website/src/locale/messages.fr.xlf
@@ -1324,6 +1324,20 @@
           <context context-type="linenumber">98</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="8011771701965405407" datatype="html">
+        <source>📌 Depuis 2022, VCG Recordz se positionne comme un hub pour les artistes cherchant à collaborer et innover dans l'industrie musicale. Opérant depuis deux studios maison, le label ne se contente pas de produire et mixer son propre matériel, mais étend également ces services à un large éventail d'artistes locaux et nationaux, soutenant fermement une vision de créativité, d'indépendance et d'effort artistique collectif.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/pages/about/about.component.html</context>
+          <context context-type="linenumber">63,67</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="5922027267158779141" datatype="html">
+        <source>📌 VCG s'est considérablement agrandi en tant que collectif depuis, avec toute une équipe derrière nous qui nous aide à organiser tous nos événements, notamment les shows de VCG à travers les festivals et salles. Ce qui a commencé comme un label de production musicale a évolué vers un collectif de divertissement complet, rassemblant artistes, DJs, ingénieurs du son et coordinateurs d'événements pour offrir des expériences live inoubliables qui mettent en valeur l'énergie et le talent de la famille VCG.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/pages/about/about.component.html</context>
+          <context context-type="linenumber">72,77</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
