--- a/website/src/locale/messages.fr.xlf
+++ b/website/src/locale/messages.fr.xlf
@@ -1338,6 +1338,13 @@
           <context context-type="linenumber">72,77</context>
         </context-group>
       </trans-unit>
+      <trans-unit id="4187800430087829506" datatype="html">
+        <source>Au-delà de notre équipe principale, VCG est un collectif grandissant d'artistes, DJs et coordinateurs offrant des performances live à travers festivals et salles.</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/components/pages/team/team.component.html</context>
+          <context context-type="linenumber">431,432</context>
+        </context-group>
+      </trans-unit>
     </body>
   </file>
 </xliff>
